solved spacing🌸

--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,9 @@
 .link {
   border: 1px solid #662eed;
   border-radius: 5px;
-  width: 100px;
-  padding: 20px 5px;
-  margin: 10px;
+
+  padding: 15px 20px;
+  margin: 15px;
   text-align: center;
   text-decoration: none;
 }
